--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h1 {
 /* Footer */
 footer {
     background: #222;
-    color: orange;
+    color: white;
     padding: 10px;
     margin-top: 20px;
 }
